# grace

./: LICENSE  README.md  apk-packages  dune-project  grace.opam  run  runtest  runtests
.github/workflows/: build-base.yml  build.yml  test.yml
docker/: alpine.Dockerfile  base.Dockerfile  centos.Dockerfile  debian.Dockerfile  main.Dockerfile  test.Dockerfile
lib/: Api.re  ApiRoutes.re  ApiToolkit.re  Grace.re  Healthchecks.re  Persistence.re  Settings.re  SettingsParser.re  TemplateGraph.re  Utils.re  Version.re  dune
test/: TestGrace.re  TestSettings.re  TestTemplateGraph.re  dune  stack.yml  waitandtest
test/data/: test-settings.yaml  test-template-graph.json  test.environment
