opam-version: "2.0"
maintainer: "Kai Klingenberg <kai.klingenberg@inria.cl>"
authors: [ "Kai Klingenberg <kai.klingenberg@inria.cl>" ]
homepage: "https://github.com/Inria-Chile/grace-main"
bug-reports: "https://github.com/Inria-Chile/grace-main/issues"
synopsis: "GRAph-based Computation Engine"
depends: [
  "alcotest-lwt" {= "1.1.0"}
  "calendar" {= "2.04"}
  "dolog" {= "4.0.0"}
  "dune" {= "2.6.1"}
  "httpaf-lwt-unix" {= "0.6.6"}
  "ocaml" {>= "4.10.0" & < "4.11.0"}
  "ocamlnet" {= "4.1.7"}
  "ppx_deriving" {= "4.5"}
  "ppx_deriving_yojson" {= "3.5.2"}
  "reason" {= "3.6.0"}
  "yaml" {= "2.1.0"}
  "yojson" {= "1.7.0"}
]
