opam-version: "2.0"
maintainer: "Kai Klingenberg <k.klingenberg@gmail.com>"
authors: [ "Kai Klingenberg <k.klingenberg@gmail.com>" ]
homepage: "https://github.com/Inria-Chile/grace-main"
bug-reports: "https://github.com/Inria-Chile/grace-main/issues"
synopsis: "GRAph-based Computation Engine"
depends: [
  "alcotest-lwt" {= "1.1.0"}
  "calendar" {= "2.04"}
  "caqti-driver-postgresql" {= "1.2.4"}
  "caqti-driver-sqlite3" {= "1.2.3"}
  "caqti-lwt" {= "1.2.0"}
  "dolog" {= "4.0.0"}
  "dune" {= "2.6.1"}
  "httpaf-lwt-unix" {= "0.6.6"}
  "ocaml" {>= "4.10.0" & < "4.11.0"}
  "ocamlnet" {= "4.1.7"}
  "ppx_deriving" {= "4.5"}
  "ppx_deriving_yojson" {= "3.5.2"}
  "reason" {= "3.6.0"}
  "yaml" {= "2.1.0"}
  "yojson" {= "1.7.0"}
]
