(library
 (name grace)
 (libraries calendar
            caqti
            caqti-lwt
            caqti-driver-postgresql
            caqti-driver-sqlite3
            dolog
            httpaf-lwt-unix
            threads
            netstring
            yaml
            yaml.unix
            yojson
            ppx_deriving_yojson.runtime)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson)))
